# coas

./: .gitignore  README.md
detection/: CMakeLists.txt  package.xml
detection/include/detection/: boundingBoxes.h  bounding_boxes.h  detection.h  euclideanClusterer.h  euclidean_clusterer.h  geographic_to_UTM_to_cartesian.hpp  matching.h  pcl2RotTrans.h  timers.h  volexFilter.h
detection/include/rootfinding/: multi_dimensional_root_finding.hpp
detection/launch/: atraque.launch  costa.launch  debug_bounding_boxes.launch  docking.launch  harbor.launch  mar.launch  patio.launch  pcl2RotTrans.launch  puerto.launch  sea.launch  test.launch
detection/msg/: VectorPointCloud.msg  vectorPointCloud.msg
detection/rviz/: ajuste.rviz  atraque.rviz  bounding_boxes.rviz  costa.rviz  docking.rviz  harbor.rviz  mar.rviz  puerto.rviz  sea.rviz
detection/src/: boundingBoxes.cpp  boundingBoxes_node.cpp  bounding_boxes.cpp  bounding_boxes_node.cpp  detection.cpp  detection_node.cpp  euclideanClusterer.cpp  euclideanClusterer_node.cpp  euclidean_clusterer.cpp  euclidean_clusterer_node.cpp  matching.cpp  matching_node.cpp  pcl2RotTrans.cpp  pcl2RotTrans_node.cpp  timers.cpp  timers_node.cpp  volexFilter.cpp  volexFilter_node.cpp
filtering/: CMakeLists.txt  package.xml
filtering/include/filtering/: sensor_filter.h  voxel_filter.h
filtering/msg/: VectorInt.msg  VectorVector.msg
filtering/src/: sensor_filter.cpp  sensor_filter_node.cpp  voxel_filter.cpp  voxel_filter_node.cpp
mapping/: CMakeLists.txt  package.xml
mapping/include/mapping/: mapFilter.h  thinMapping.h  volexFilter.h  voxelFilter.h
mapping/launch/: octomap_mapping.launch
mapping/msg/: timeNode.msg  vectorVector.msg
mapping/src/: mapFilter.cpp  mapFilter_node.cpp  mapping.cpp  thinMapping.cpp  thinMapping_node.cpp  volexFilter.cpp  volexFilter_node.cpp  voxelFilter.cpp  voxelFilter_node.cpp  voxtraversal.cpp
